fix(JournalEntryManuel): addFileModal - styling
Because scrollbar was outside the modal

ref: UK-797

--- a/src/styles/specifics/accounting/_bill.sass
+++ b/src/styles/specifics/accounting/_bill.sass
@@ -351,7 +351,7 @@ bill-simple-journalentry
 
 #preview_container_id
 	flex: 1 0 45%
-	margin-left: 2rem
+	margin-left: 0
 	display: none
 	height: 34rem
 	overflow-y: scroll
